src/test/control_flujo/error_break_fuera_de_bucle.cps
// âŒ 'break' solo permitido dentro de bucles.
break; // error: 'break' fuera de un bucle
